[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "littletree"
dynamic = ["version"]
authors = [
    {name = "lverweijen", email = "lauwerund@gmail.com"}
]
description = "Tree library"
readme = "README.md"
requires-python = ">= 3.10"
keywords = [
    "tree",
    "datastructure",
    "hierarchy",
    "taxonomy",
    "newick",
    "graphviz",
    "mermaid",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "abstracttree >= 0.0.4",
]
license = {text = "Apache License 2.0"}

[project.optional-dependencies]
export = [
    "Pillow >= 5.0"
]

[project.urls]
Homepage = "https://github.com/lverweijen/littletree"
Documentation = "https://github.com/lverweijen/littletree/blob/main/tutorial.md"
Repository = "https://github.com/lverweijen/littletree"
Issues = "https://github.com/lverweijen/littletree/issues"
Changelog = "https://github.com/lverweijen/littletree/blob/main/changes.md"

[tool.setuptools.packages.find]
include = ["littletree*"]

[tool.setuptools.dynamic]
version = {attr = "littletree.__version__"}