[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "littletree"
version = "0.9.1"
authors = [
    {name = "lverweijen", email = "lauwerund@gmail.com"}
]
description = "Tree library"
readme = "README.md"
requires-python = ">= 3.10"
keywords = [
    "tree",
    "datastructure",
    "hierarchy",
    "taxonomy",
    "newick",
    "graphviz",
    "mermaid",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "abstracttree >= 0.2.0",
]
license = "Apache-2.0"

[project.optional-dependencies]
export = [
    "Pillow >= 5.0",
    "matplotlib >= 3.0",
    "svglib >= 1.5.0",
]

[project.urls]
Homepage = "https://github.com/lverweijen/littletree"
Documentation = "https://lverweijen.github.io/littletree"
Repository = "https://github.com/lverweijen/littletree"
Issues = "https://github.com/lverweijen/littletree/issues"
Changelog = "https://lverweijen.github.io/littletree/changelog.html"
