[metadata]
name = littletree
version = attr: littletree.__version__
author = lverweijen
author_email = lauwerund@gmail.com
url = https://github.com/lverweijen/littletree
description = Tree library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tree
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
python_requires = >= 3.8
packages = find:

[options.packages.find]
include = littletree*