[metadata]
name = littletree
version = attr: littletree.__version__
author = lverweijen
author_email = lauwerund@gmail.com
url = https://github.com/lverweijen/littletree
description = Tree library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tree, datastructure, hierarchy, taxonomy, newick, graphviz, mermaid
license = Apache License 2.0
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
python_requires = >= 3.10
packages = find:
install_requires =
    abstracttree >= 0.0.4

[options.packages.find]
include = littletree*

[options.extras_require]
pillow = Pillow >= 5.0